tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_25.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 2;
               r := p;
               p := (~ p);
               q := ((1 # (z + (+ 0))) OR (((y MOD y) MOD (2 * x)) >= ((1223 * 2) * x)));
  (* error *)  p := (y > (z + ((r DIV 1223) MOD (y * 200))));
               z := (+ 0);
               x := (+ x);
               q := (~ (0 > x));
               q := ((((1 * x) + (+ 0)) > 2) OR ((r & r) OR p));
               q := (((+ (z - x)) + (- 1)) > 200)
END Test15.